examples/test/testpolicy9337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9337
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key0: value10
      key4: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value47
          key16: value25
          key12: value17
      podSelector:
        matchLabels:
          key42: value0
